<resources>
    <string name="app_name">Chatlaung16</string>
    <string name="contact">ติดต่อ นิติฯ</string>
    <string name="ส่ง">ส่งข้อมูลการจ่ายเงินค่าส่วนกลาง</string>
    <string name="ติด">ติดต่อ นิติฯ</string>
    <string name="ข้อมูลหน่วย">ข้อมูลหน่วยรักษาความปลอดภัย</string>
    <string name="ข้อมูลฟิตเนส">ข้อมูลฟิตเนส</string>
    <string name="ข้อมูลว่ายน้ำ">ข้อมูลสระว่ายน้ำ</string>
    <string name="chatlaung_16">Chatlaung 16</string>
    <string name="ส่งข้อมูลการจ่ายเงิน">ส่งข้อมูลการจ่ายเงินค่าส่วนกลาง</string>
    <string name="กรอก">กรอกเลขที่บ้าน</string>
    <string name="ใส่เวลา">ใส่เวลาที่ได้ทำการจ่ายเงินค่าส่วนกลาง</string>
    <string name="กดส่ง">ส่ง</string>
    <string name="แนบหลักฐาน">สามารถแนบรูปหลักฐานการจ่ายเงินค่าส่วนกลางเพิ่มเติมได้ที่นี่</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit_image">Submit Image</string>
    <string name="homepage">กลับ Homepage</string>
    <string name="กลับhomepage">กลับ Homepage</string>
    <string name="ข้อความข้อมูลหน่วยรักษาความปลอดภัย">หมู่บ้านมีทางเข้า 2 ฝั่ง โดยทั้ง 2 ฝั่งจะมียามประจำอยู่ตลอดเวลา 24 ชั่วโมง\nรวมไปถึงหน่วยรักษาความสะอาด \nคอยกวาดถนนและเก็บขยะทุกวันช่วงเย็น\n\nเบอร์ติดต่อ: XXX-XXX-XXXX ชื่อยาม นาย.....\n\nการเข้าหมู่บ้านจะต้องใช้ keycard ในการเข้าทุกครั้ง</string>
    <string name="หัวเรื่องข้อมูลหน่วยรักษาความปลอดภัย">ข้อมูลหน่วยรักษาความปลอดภัย</string>
    <string name="หัวเรื่องข้อมูลสระว่ายน้ำ">ข้อมูลสระว่ายน้ำ</string>
    <string name="ข้อความข้อมูลสระว่ายน้ำ">หยุดทุกวันจันทร์เพื่อทำความสะอาด\nเปิดให้ใช้งาน:\nอังคาร–ศุกร์ 11:00–20:00\nเสาร์–อาทิตย์ 09:00–20:00\n\nระเบียบการใช้งาน:\n1. ห้ามผู้ป่วยลงใช้สระว่ายน้ำ\n2. ต้องสวมชุดว่ายน้ำตามมาตรฐาน\n3. ชำระล้างร่างกายก่อนลงสระ\n4. ห้ามนำอาหาร เครื่องดื่มลงสระ\n5. ห้ามลงสระขณะฝนตก\n6. ห้ามนำอุปกรณ์ที่ใหญ่เกินลงสระ\n7. ใช้ร่วมกับผู้อื่นด้วยความสุภาพ</string>
    <string name="กลับไปhomepage">กลับ Homepage</string>
    <string name="ใบ้เลขไอดี">HomeNumber 8801</string>
    <string name="ใบ้รหัสเข้า">Dayin 010122</string>
    <string name="login">Login</string>
    <string name="หัวข้อติดต่อนิติ">ติดต่อ นิติ</string>
    <string name="ใบ้ให้ใส่ข้อมูล">ส่งข้อมูลที่ต้องการไปยังนิติเพื่อรับทราบ</string>
    <string name="ส่งไปหานิติ">ส่ง</string>
    <string name="กดเพื่อกลับhomepage">กลับHomepage</string>
    <string name="หัวเรื่องข้อมูลปิตเนส">ข้อมูลฟิตเนส</string>
    <string name="ข้อความข้อมูลฟิตเนส">หยุดทุกวันจันทร์เพื่อทำความสะอาด\nเปิดให้ใช้งาน:\nอังคาร–ศุกร์ 11:00–20:00\nเสาร์–อาทิตย์ 09:00–20:00\n\nระเบียบการใช้งาน:\n1. ให้บริการเฉพาะสมาชิกในหมู่บ้านเท่านั้น\n2. โปรดใช้อุปกรณ์อย่างถูกวิธี\n3. ห้ามนำอาหารและเครื่องดื่มแอลกอฮอล์เข้ามารับประทานภายในห้อง\n4. ห้ามสูบบุหรี่ในห้องออกกำลังกาย\n5. โปรดรักษาความสะอาด\n6. ห้ามนำสัตว์เลี้ยงเข้ามาในห้อง\n7. ใช้อุปกรณ์ออกกำลังกายด้วยความสุภาพ ไม่รบกวนผู้อื่น\n8. ห้ามโยนหรือปล่อยอุปกรณ์ต่างๆ อย่างรุนแรงโดยเด็ดขาด</string>
    <string name="กดแล้วกลับ">กลับ Homepage</string>
    <string name="แจ้ง">แจ้งเรื่องนิติ</string>
    <string name="โอน">จ่ายเงินโอน</string>
    <string name="สด">จ่ายเงินสด</string>
    <string name="เลือกวัน">เลือกวันที่</string>
    <string name="เลือกเวลา">เลือกเวลา</string>
</resources>